--- a/First Exercise.html
+++ b/First Exercise.html
@@ -21,7 +21,7 @@
 	      background-color:#030303;
 		  
 		  
-		  background-image: url('pacmanghost.jpg') ;
+		  background-image: url('pacmanstuff.jpg');
 		  background-repeat: no-repeat;
 		  background-size: cover;
 		  background-attachment: fixed;
@@ -33,6 +33,7 @@
 		}
  
     div {
+	     background-color: black
 	     margin-left: auto;
 		 margin-right: auto;
 		 margin-top: 500px;
