--- a/First Exercise.html
+++ b/First Exercise.html
@@ -3,17 +3,18 @@
 <html>
 
 <head>
+    <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
     <title>PacMan</title>
 	<style>
 	h1 {
 	    color:#FFEE02;
-		font-size:30pt;
+		font-size:40pt;
 		
 	}
 	
 	h2 {
 	    color: #FFEE02;
-        font-size:20pt;
+        font-size:30pt;
 		
     }
 	
@@ -27,9 +28,9 @@
 		  background-attachment: fixed;
 		  
 		  
-		  font-family:Courier New;
+		  font-family:'VT323', monospace;
 		  color:white;
-		  font-size:15pt;
+		  font-size:20pt;
 		}
  
     div {
@@ -61,22 +62,25 @@
 <h1>PacMan!</h1>
 <img src="pacman.jpg" width="300px">
 
-	Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed pellentesque blandit cursus. Phasellus condimentum maximus volutpat. In dui odio, rutrum a ante non, tempor elementum purus. Sed eleifend varius vehicula. Aliquam a sodales lacus, sed euismod orci.
+	<p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed pellentesque blandit cursus. Phasellus condimentum maximus volutpat. In dui odio, rutrum a ante non, tempor elementum purus. Sed eleifend varius vehicula. Aliquam a sodales lacus, sed euismod orci.</p>
 	
 <h2>Subheading 1!</h2>
 	
-	Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque finibus aliquam odio. Morbi id tristique diam, sit amet semper ex. Nulla tincidunt massa ac urna tristique tempor non vitae lectus. 
+	<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque finibus aliquam odio. Morbi id tristique diam, sit amet semper ex. Nulla tincidunt massa ac urna tristique tempor non vitae lectus.</p>
 
 <h2>Subheading 2!</h2>
 	
-	Nam ut dictum erat, vitae feugiat lectus. Donec aliquet imperdiet tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum sollicitudin massa at quam auctor, ut egestas lectus convallis.
+	<p>Nam ut dictum erat, vitae feugiat lectus. Donec aliquet imperdiet tempor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum sollicitudin massa at quam auctor, ut egestas lectus convallis.</p>
 
 <h2>Subheading 3!</h2>
+<ul>
+	<li>  Vestibulum sollicitudin  </li>
+	<li>  Nam ut dictum  </li>
+	<li>  Interdum et malesuada </li>
+	<li>  Aliquam a sodales </li>
 	
-	Vestibulum sollicitudin
-	Nam ut dictum
-	Interdum et malesuada
-	Aliquam a sodales
+	
+	<a href="http://www.pokemon.com">a website</a> </p>
 	
 </div>
 
